<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.65"
        android:orientation="vertical">

        <TextView
            android:id="@+id/jobseeker_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="9dip"
            android:layout_marginRight="9dip"
            android:text="@string/Add_a_5_video_showing_why_you_should_be_chosen_Dont_forget_to_smile" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:id="@+id/videoFrame">

            <VideoView
                android:id="@+id/feedVideoView"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <ImageView
                android:id="@+id/palceholder_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/placeholder" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.35"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="9dip"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="3dip"
        android:layout_below="@+id/palceholder_video">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recordNewVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="4dip"
                android:src="@drawable/record_video" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Grabar"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/questionMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:src="@drawable/qn_mark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ideas"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/videoSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dip"
                android:src="@drawable/save_profile_button" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Guardar"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
